--- a/src/app/modules/docente-capacitador/entrega-certificados/pages/entrega-certificados.component.html
+++ b/src/app/modules/docente-capacitador/entrega-certificados/pages/entrega-certificados.component.html
@@ -22,8 +22,8 @@
         </div>
     </div>
 </div>
-<div class="container" style="background-color: #ffffff;">
-    <div class="container2" *ngIf="showContainer2">
+<div class="container" style="background-color: #ffffff;" *ngIf="showContainer2">
+    <div class="container2" >
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb" class="main-breadcrumb my-nav">
             <ol class="breadcrumb">
@@ -58,8 +58,8 @@
 
     </div>
 </div>
-<div class="container" style="background-color: #ffffff;">
-    <div class="container2" *ngIf="showContainer3">
+<div class="container" style="background-color: #ffffff;" *ngIf="showContainer3">
+    <div class="container2" >
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb" class="main-breadcrumb my-nav">
             <ol class="breadcrumb">
@@ -102,8 +102,8 @@
         </div>
     </div>
 </div>
-<div class="container" style="background-color: #ffffff;">
-    <div class="container2" *ngIf="showContainer4">
+<div class="container" style="background-color: #ffffff;" *ngIf="showContainer4">
+    <div class="container2" >
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb" class="main-breadcrumb my-nav">
             <ol class="breadcrumb">
