--- a/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
+++ b/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
@@ -171,7 +171,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="index.html">
+              <a class="dropdown-item d-flex align-items-center" (click)="Cerrarsesion()">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Cerrar Sesión</span>
               </a>
@@ -301,7 +301,7 @@
       <li class="nav-heading">Pages</li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="index.html">
+        <a class="nav-link collapsed" (click)="Cerrarsesion()">
           <i class="bi bi-box-arrow-in-right"></i>
           <span>Cerrar Sesión</span>
         </a>
