--- a/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
+++ b/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
@@ -16,11 +16,11 @@
           src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png"
           alt=""
         />
-        <h4>CAPACITATE</h4>
-        <h1>TECNOLOGICO DEL AZUAY</h1>
+        <h4>     </h4>
+        <h1>TECNOLÓGICO DEL AZUAY</h1>
         <h3>Innovación de hoy para el éxito del mañana</h3>
         <button (click)="goTologin($event)" class="btn">Iniciar Sesión</button>
-        <button (click)="goToRegister($event)" class="btn">Registrate</button>
+        <button (click)="goToRegister($event)" class="btn">Regístrate</button>
       </div>
     </div>
 
@@ -81,17 +81,17 @@
       <div class="about-me-text">
         <h2>TecAzuay Capacitando</h2>
         <p>
-          El Instituto Superior Universitario Tecnológico del Azuay se consolida
+          El Instituto Superior Universitario Tecnológico del Azuay se consolida 
           como una institución de educación superior que sustenta sus procesos
           de enseñanza-aprendizaje en el ámbito técnico y tecnológico de grado y
-          posgrado, con la más alta calidad académica y humana, sobre la base de
-          fundamentos científicos; con el propósito de proveer soluciones a los
-          problemas y necesidades de la sociedad desde la docencia, la
-          investigación científica y la vinculación..
+          posgrado, con la más alta calidad académica y humana, sobre la base de 
+          fundamentos científicos. Su propósito es proveer soluciones a los 
+          problemas y necesidades de la sociedad a través de la docencia, la 
+          investigación científica y la vinculación.
         </p>
       </div>
       <img
-        src="https://scontent.fcue1-1.fna.fbcdn.net/v/t39.30808-6/321500026_5802495706493873_2084185095659677616_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=730e14&_nc_ohc=L1Oiv6RhfQQAX-4RCWS&_nc_ht=scontent.fcue1-1.fna&oh=00_AfBknPZfJ_inzKmbgZSOKhBzkp91HOFS2npU16oFUXYmag&oe=644B6B65"
+        src="https://tecazuay.edu.ec/assets/img/home/1.png"
         alt="me"
       />
     </div>
@@ -99,12 +99,12 @@
     <!--Parte de Mision-->
     <div class="about-me">
       <img
-        src="https://scontent.fcue1-1.fna.fbcdn.net/v/t39.30808-6/342043495_769610987898701_1993429123696271834_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a26aad&_nc_ohc=1Bv9UPmD1MEAX-Ki0dG&_nc_ht=scontent.fcue1-1.fna&oh=00_AfDvwpXPf77k-LbKpK4OmWDYfkkpfby5Tu9qgNjqxmKdvg&oe=644BCE47"
+        src="https://scontent.fcue2-1.fna.fbcdn.net/v/t39.30808-6/350039725_208950438164827_1339405126031521081_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=730e14&_nc_ohc=OmS_OGPz75QAX_yU673&_nc_ht=scontent.fcue2-1.fna&oh=00_AfDdivqZLWjEBdh4WAhCsjFEFQq_oNQokGJYJU5vAD87Nw&oe=6478F180"
         alt="me"
       />
 
       <div class="about-me-text">
-        <h2>Mision</h2>
+        <h2>Misión</h2>
         <p>
           Ser una institución de calidad, solidaria, inclusiva, intercultural y
           diversa, reconocida por su excelencia académica y sus aportes a la
@@ -119,7 +119,7 @@
     <!--Parte de Vision-->
     <div class="about-me">
       <div class="about-me-text">
-        <h2>Vision</h2>
+        <h2>Visión</h2>
         <p>
           Ser una institución de calidad, solidaria, inclusiva, intercultural y
           diversa, reconocida por su excelencia académica y sus aportes a la
