--- a/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
+++ b/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
@@ -115,7 +115,7 @@
             <select id="sexo" [(ngModel)]="signupRequest.persona.sexo" name="sexo" required>
               <option>Masculino</option>
               <option>Femenino</option>
-              <option>No especificar</option>
+              <option>Otro</option>
             </select>
             <small  style="font-size: 10px;" class="text-danger" *ngIf="!valsexo">Campo requerido.</small>
           </div>
