--- a/src/app/modules/administrador/edit-dts-admin/pages/edit-dts-admin/edit-dts-admin.component.html
+++ b/src/app/modules/administrador/edit-dts-admin/pages/edit-dts-admin/edit-dts-admin.component.html
@@ -159,7 +159,7 @@
                                     <select id="inputSexo" class="form-control" name="sexo" [(ngModel)]="persona.sexo">
                                         <option value='Masculino'>Masculino</option>
                                         <option value='Femenino'>Femenino</option>
-                                        <option value='No especificar'>No especificar</option>
+                                        <option value='Otro'>Otro</option>
                                     </select>
                                     <small class="text-danger" *ngIf="!valsexo">Campo requerido.</small>
                                 </div>
