--- a/src/app/modules/docente-capacitador/edit-dts-docentes/pages/edit-dts-docentes/edit-dts-docentes.component.html
+++ b/src/app/modules/docente-capacitador/edit-dts-docentes/pages/edit-dts-docentes/edit-dts-docentes.component.html
@@ -159,7 +159,7 @@
                                     <select id="inputSexo" class="form-control" name="sexo" [(ngModel)]="persona.sexo">
                                         <option value='Masculino'>Masculino</option>
                                         <option value='Femenino'>Femenino</option>
-                                        <option value='No especificar'>No especificar</option>
+                                        <option value='Otro'>Otro</option>
                                     </select>
                                     <small class="text-danger" *ngIf="!valsexo">Campo requerido.</small>
                                 </div>
