--- a/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
+++ b/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
@@ -59,7 +59,7 @@
         </figure>
         <div class="contenido-card">
           <h3>{{ curso.curNombre }}</h3>
-          <p>{{ curso.datosSilabo.dsiDescripcioncurso }} <a>Ingresar</a></p>
+          <p>{{ curso.datosSilabo.dsiDescripcioncurso }} <a (click)="goTologin($event)">Ingresar</a></p>
         </div>
       </div>
     </div>
