--- a/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
+++ b/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
@@ -126,7 +126,7 @@
               <option>Indígena</option>
               <option>Blanco</option>
               <option>Afroecuatoriano</option>
-              <option>Otros</option>
+              <option>Otro</option>
             </select>
             <small   style="font-size: 10px;" class="text-danger" *ngIf="!valetnia">Campo requerido.</small>
           </div>
