--- a/src/app/modules/docente-capacitador/register-silabo/pages/register-silabo/register-silabo.component.html
+++ b/src/app/modules/docente-capacitador/register-silabo/pages/register-silabo/register-silabo.component.html
@@ -27,13 +27,13 @@
           </label>
           <div class="ms-3">
             <label for="docencia" class="form-label">Docencia</label>
-            <input type="number" id="docencia" name="docencia" class="form-control" formControlName="hapDocencia"
-              (input)="checkNegative($event)" [(ngModel)]="horasapren.hapDocencia" />
+            <input type="number" id="docencia" name="hapDocencia" class="form-control" formControlName="hapDocencia"
+              formControlName="hapDocencia" (input)="checkNegative($event)" [(ngModel)]="horasapren.hapDocencia" />
             <label for="practicas" class="form-label">Prácticas</label>
-            <input type="number" id="practicas" name="practicas" class="form-control" formControlName="hapPracticas"
+            <input formControlName="hapPracticas"  type="number" id="practicas" name="practicas" class="form-control" formControlName="hapPracticas"
               (input)="checkNegative($event)" [(ngModel)]="horasapren.hapPracticas" />
             <label for="autonomo" class="form-label">Trabajo Autónomo</label>
-            <input type="number" id="autonomo" name="autonomo" class="form-control" formControlName="hapTrabajoAutonomo"
+            <input formControlName="hapTrabajoAutonomo"  type="number" id="autonomo" name="autonomo" class="form-control" formControlName="hapTrabajoAutonomo"
               (input)="checkNegative($event)" [(ngModel)]="horasapren.hapTrabajoAutonomo" />
           </div>
         </div>
@@ -73,7 +73,7 @@
 
               <td>
                 <textarea id="unidad_competencia_{{i}}" name="unidad_competencia_{{i}}" rows="3" class="form-control"
-                  formControlName="rapUnidadcompe" #texcrapUnidadcompe style="width: 410px;" rows="8"
+                [formControl]="rapUnidadcompe(i)" #texcrapUnidadcompe style="width: 410px;" rows="8"
                   [(ngModel)]="resultadosAprendizajes[i].rapUnidadcompe"></textarea>
                 <button type="button" class="btn btn-success" (click)="addBullet(texcrapUnidadcompe)">Agregar
                   viñeta</button>
@@ -84,7 +84,7 @@
               <td>
 
                 <textarea id="elementos_competencias_{{i}}" name="elementos_competencias_{{i}}" rows="3"
-                  class="form-control" formControlName="rapElementoscomp" #texcrapElementoscompe style="width: 410px;"
+                  class="form-control"    [formControl]="rapElementoscompe(i)" #texcrapElementoscompe style="width: 410px;"
                   rows="8" [(ngModel)]="resultadosAprendizajes[i].rapElementoscompe"></textarea>
                 <button type="button" class="btn btn-success" (click)="addBullet(texcrapElementoscompe)">Agregar
                   viñeta</button>
@@ -94,7 +94,7 @@
               </td>
               <td>
                 <textarea id="rapResultadosaprenactiv{{i}}" name="rapResultadosaprenactiv{{i}}" rows="3"
-                  class="form-control" formControlName="rapResultadosaprenactiv" #texcrapResultadosaprenactiv
+                  class="form-control"  [formControl]="rapResultadosaprenactiv(i)"  #texcrapResultadosaprenactiv
                   style="width: 410px;" rows="8"
                   [(ngModel)]="resultadosAprendizajes[i].rapResultadosaprenactiv"></textarea>
                 <button type="button" class="btn btn-success" (click)="addBullet(texcrapResultadosaprenactiv)">Agregar
@@ -105,7 +105,7 @@
               </td>
               <td>
                 <textarea id="rapFormaevidenciar{{i}}" name="rapFormaevidenciar{{i}}" rows="3" class="form-control"
-                  formControlName="rapFormaevidenciar" #texcrapFormaevidenciar style="width: 410px;" rows="8"
+                  [formControl]="rapFormaevidenciar(i)"   #texcrapFormaevidenciar style="width: 410px;" rows="8"
                   [(ngModel)]="resultadosAprendizajes[i].rapFormaevidenciar"></textarea>
                 <button type="button" class="btn btn-success" (click)="addBullet(texcrapFormaevidenciar)">Agregar
                   viñeta</button>
@@ -145,11 +145,12 @@
             <tr *ngFor="let resultado of contenidosCurso; let i = index" [class.selected]="resultado.ccuId ">
               <td>
                 <input style="width: 60px;" type="number" id="dia" name="dia" class="form-control"
-                  formControlName="ccuDia" (input)="checkNegative($event)" [(ngModel)]="contenidosCurso[i].ccuDia" />
+                 [formControl]="ccuDia(i)"  (input)="checkNegative($event)" [(ngModel)]="contenidosCurso[i].ccuDia" />
+
               </td>
               <td>
                 <textarea #textcontenido id="ccuContenidos" name="ccuContenidos" rows="8" class="form-control"
-                  formControlName="ccuContenidos" [(ngModel)]="resultado.ccuContenidos"
+                    [formControl]="ccuContenidos(i)" [(ngModel)]="resultado.ccuContenidos"
                   style="width: 410px;"></textarea>
                 <button type="button" class="btn btn-success" (click)="addBullet(textcontenido)">Agregar viñeta</button>
                 <button type="button" class="btn btn-warning" (click)="addLINE(textcontenido)">Agregar línea de
@@ -157,12 +158,12 @@
               </td>
               <td>
                 <input type="number" id="ccuHorasclase" name="ccuHorasclase" class="form-control"
-                  (input)="checkNegative($event)" formControlName="ccuHorasclase" style="width: 60px;" row="8"
+                  (input)="checkNegative($event)"  [formControl]="ccuHorasclase(i)"   style="width: 60px;" row="8"
                   [(ngModel)]="contenidosCurso[i].ccuHorasclase" />
               </td>
               <td>
                 <textarea id="ccuActividaddocencia" name="ccuActividaddocencia" class="form-control"
-                  formControlName="ccuActividaddocencia" #texcuActividaddocenci style="width: 410px;" rows="8"
+                 [formControl]="ccuActividaddocencia(i)"  #texcuActividaddocenci style="width: 410px;" rows="8"
                   [(ngModel)]="contenidosCurso[i].ccuActividaddocencia"></textarea>
                 <button type="button" class="btn btn-success" (click)="addBullet(texcuActividaddocenci)">Agregar
                   viñeta</button>
@@ -170,13 +171,13 @@
                   separación</button>
               </td>
               <td>
-                <input type="number" id="ccuHoraspractica" name="ccuHoraspractica" class="form-control"
-                  formControlName="ccuHoraspractica" (input)="checkNegative($event)"
+                <input type="number" id="ccuHoraspractica" [formControl]="ccuHoraspractica(i)" name="ccuHoraspractica" class="form-control"
+                  (input)="checkNegative($event)"
                   [(ngModel)]="contenidosCurso[i].ccuHoraspractica" />
               </td>
               <td>
-                <textarea id="ccuActividadpractica" name="ccuActividadpractica" class="form-control"
-                  formControlName="ccuActividadpractica" #texcuActividadpractica style="width: 410px;" rows="8"
+                <textarea id="ccuActividadpractica" [formControl]="ccuActividadpractica(i)"  name="ccuActividadpractica" class="form-control"
+                 #texcuActividadpractica style="width: 410px;" rows="8"
                   [(ngModel)]="contenidosCurso[i].ccuActividadpractica"></textarea>
                 <button type="button" class="btn btn-success" (click)="addBullet(texcuActividaddocenci)">Agregar
                   viñeta</button>
@@ -185,13 +186,13 @@
 
               </td>
               <td>
-                <input type="number" id="ccuHorastrabajoauto" name="ccuHorastrabajoauto" class="form-control"
-                  formControlName="ccuHorastrabajoauto" (input)="checkNegative($event)"
+                <input type="number" id="ccuHorastrabajoauto"   [formControl]="ccuHorastrabajoauto(i)"   name="ccuHorastrabajoauto" class="form-control"
+                (input)="checkNegative($event)"
                   [(ngModel)]="contenidosCurso[i].ccuHorastrabajoauto" />
               </td>
               <td>
-                <textarea id="ccuActividadtrabajoauto" name="ccuActividadtrabajoauto" rows="3" class="form-control"
-                  formControlName="ccuActividadtrabajoauto" #texcuActividadtrabajoauto style="width: 410px;" rows="8"
+                <textarea id="ccuActividadtrabajoauto"   [formControl]="ccuActividadtrabajoauto(i)" name="ccuActividadtrabajoauto" rows="3" class="form-control"
+                   #texcuActividadtrabajoauto style="width: 410px;" rows="8"
                   [(ngModel)]="contenidosCurso[i].ccuActividadtrabajoauto"></textarea>
                 <button type="button" class="btn btn-success" (click)="addBullet(texcuActividadtrabajoauto)">Agregar
                   viñeta</button>
@@ -199,8 +200,8 @@
                   de separación</button>
               </td>
               <td>
-                <textarea id="ccuObservaciones" name="ccuObservaciones" rows="3" class="form-control"
-                  formControlName="ccuObservaciones" #texcuObservaciones style="width: 410px;" rows="8"
+                <textarea id="ccuObservaciones"  [formControl]="ccuObservaciones(i)" name="ccuObservaciones" rows="3" class="form-control"
+                  #texcuObservaciones style="width: 410px;" rows="8"
                   [(ngModel)]="contenidosCurso[i].ccuObservaciones"></textarea>
                 <button type="button" class="btn btn-success" (click)="addBullet(texcuObservaciones)">Agregar
                   viñeta</button>
@@ -230,19 +231,17 @@
             <tbody>
               <tr *ngFor="let resultado of estrategiasMetodologicas; let i = index" [class.selected]="resultado.emeId ">
                 <td>
-                  <textarea type="text" id="emeEstrategia" name="emeEstrategia" rows="3" class="form-control"
-                    formControlName="emeEstrategia" [(ngModel)]="estrategiasMetodologicas[i].emeEstrategia"></textarea>
+                    <textarea [formControl]="estrategiaControl(i)" id="emeEstrategia" name="emeEstrategia" rows="3" class="form-control"></textarea>
                 </td>
                 <td>
-                  <input type="text" id="emeFinalidad" name="emeFinalidad" class="form-control"
-                    formControlName="emeFinalidad" [(ngModel)]="estrategiasMetodologicas[i].emeFinalidad" />
+                    <input [formControl]="finalidadControl(i)" type="text" id="emeFinalidad" name="emeFinalidad" class="form-control" />
                 </td>
                 <td>
-                  <button type="button" class="btn btn-danger btn-sm deleteRow" (click)="eliminarFilaestrategia(i)">
-                    Eliminar
-                  </button>
+                    <button type="button" class="btn btn-danger btn-sm deleteRow" (click)="eliminarFilaestrategia(i)">Eliminar</button>
                 </td>
-              </tr>
+            </tr>
+            
+              
             </tbody>
           </table>
           <button type="button" class="btn btn-success mt-2" (click)="agregarFilaevaestrategia()">
@@ -276,12 +275,12 @@
           <tbody>
             <tr *ngFor="let resultado of evaluacioneprea; let i = index" [class.selected]="resultado.eraId">
               <td>
-                <input formControlName="eraTipoactividades" type="text" id="dia" name="dia" class="form-control"
+                <input [formControl]="eraTipoactividades(i)"  type="text" id="dia" name="dia" class="form-control"
                   [(ngModel)]="evaluacioneprea[i].eraTipoactividades" />
               </td>
               <td>
                 <input type="number" id="eraCantactvidades" name="eraCantactvidades" rows="3" class="form-control"
-                  formControlName="eraCantactvidades" (input)="checkNegative($event); calcularTotal(i)"
+                [formControl]="eraCantactvidades(i)"  (input)="checkNegative($event); calcularTotal(i)"
                   [(ngModel)]="evaluacioneprea[i].eraCantactvidades" />
               </td>
               <td>
@@ -291,7 +290,7 @@
               </td>
               <td>
                 <input id="eraTotal" name="eraTotal" type="number" rows="3" class="form-control"
-                  formControlName="eraTotal" (input)="checkNegative($event)" [value]="eraTotales[i]" readonly />
+                [formControl]="eraTotal(i)"  (input)="checkNegative($event)" [value]="eraTotales[i]" readonly />
 
               </td>
               <td>
@@ -316,6 +315,9 @@
         <button (click)="crearsilabo()" type="submit" class="btn btn-primary">Guardar</button>
       </div>
     </form>
+    <pre>
+      {{horasapren | json}}
+    </pre>
   </div>
 </body>
 </html>
