--- a/src/app/modules/docente-capacitador/edit-list-silabo/pages/edit-list-silabo/edit-list-silabo.component.html
+++ b/src/app/modules/docente-capacitador/edit-list-silabo/pages/edit-list-silabo/edit-list-silabo.component.html
@@ -12,7 +12,7 @@
 
   <div class="container mt-2">
 
-    <h1 style="margin-top: 15px; " class="text-center mb-5">LISTADO DE NECESIDADES DE CURSO</h1>
+    <h1 style="margin-top: 15px; " class="text-center mb-5">LISTADO DE SÍLABOS DE CURSO</h1>
 
     <div class="table-responsive">
 
